<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home2"
        android:icon="@drawable/tab_home_main1"
        android:title="@string/main_tab_text11" />

    <item
        android:id="@+id/navigation_dashboard2"
        android:icon="@drawable/tab_home_main2"
        android:visible="true"
        android:title="@string/main_tab_text22" />

    <item
        android:id="@+id/navigation_phone2"
        android:icon="@drawable/tab_home_main3"
        android:visible="true"
        android:title="@string/main_tab_text44" />

    <item
        android:id="@+id/navigation_notifications2"
        android:icon="@drawable/tab_home_main4"
        android:title="@string/main_tab_text33" />

</menu>