<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >


     <LinearLayout
         android:layout_width="280dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:background="@drawable/custom_divider_white"
         android:layout_gravity="center"
         android:gravity="center"
         >


         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">

             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/my_tx5"
                 android:textSize="@dimen/textSize18sp"
                 android:textColor="@color/color_414141"
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:layout_marginTop="15dp"
                 android:layout_centerHorizontal="true"
                 ></TextView>


             <ImageView
                 android:id="@+id/select_im_close"
                 android:layout_width="12dp"
                 android:layout_height="12dp"
                 android:layout_alignParentRight="true"
                 android:layout_marginTop="14dp"
                 android:layout_marginRight="14dp"
                 android:src="@drawable/g_pic31"></ImageView>

         </RelativeLayout>


         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/my_tx6"
             android:textSize="@dimen/textSize16sp"
             android:textColor="@color/color_414141"
             android:gravity="center"
             android:layout_gravity="center"
             android:layout_marginTop="23dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             ></TextView>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:background="@color/color_c4c4c4"
                android:layout_marginTop="15dp"
                ></View>


         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="46dp"
             android:orientation="horizontal"
             >

             <TextView
                 android:id="@+id/authority_tv1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="@string/my_tx7"
                 android:textSize="@dimen/textSize16sp"
                 android:textColor="@color/color_666666"
                 android:layout_weight="1"
                 android:gravity="center"
                 ></TextView>

             <View
                 android:layout_width="0.7dp"
                 android:layout_height="match_parent"
                 android:background="@color/color_c4c4c4"
                 ></View>

             <TextView
                 android:id="@+id/authority_tv2"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="@string/my_tx8"
                 android:textSize="@dimen/textSize16sp"
                 android:textColor="@color/color_666666"
                 android:layout_weight="1"
                 android:gravity="center"
                 ></TextView>



         </LinearLayout>

     </LinearLayout>



</LinearLayout>